pulling new adds

--- a/kl/api.ipynb
+++ b/kl/api.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,45 @@
     "    \"BIDEN FOR PRESIDENT\",\n",
     "    \"DONALD J. TRUMP FOR PRESIDENT\"\n",
     "]\n",
+    "\n",
+    "searches = {\n",
+    "    'CA 2022 Newsom vs Dahle': {\n",
+    "        'search_terms': ['Newsom for California Governor 2022', 'Brian Dahle for Governor 2022', 'Kevin Faulconer for Governor 2022'],\n",
+    "        'starts': ['2021-12-14', '2022-03-10', '2022-03-23'],\n",
+    "        'ends': ['2022-11-08', '2022-11-08', '2022-11-08']\n",
+    "    },\n",
+    "    'CA 2018 Newsom vs Cox': {\n",
+    "        'search_terms': ['Newsom for California Governor 2018', 'John Cox for Governor 2018'],\n",
+    "        'starts': ['2017-12-06', '2017-12-06'],\n",
+    "        'ends': ['2018-11-06', '2018-11-06']\n",
+    "    },\n",
+    "    'NV 2022 Lombardo vs Sisolak': {\n",
+    "        'search_terms': ['Lombardo for Governor', 'Committee to Elect Steve Sisolak'],\n",
+    "        'starts': ['2022-01-01', '2022-06-01'],\n",
+    "        'ends': ['2022-11-08', '2022-11-08']\n",
+    "    },\n",
+    "    'AZ 2022 Hobbs vs Lake': {\n",
+    "        'search_terms': ['Elect Katie Hobbs', 'Lake For AZ'],\n",
+    "        'starts': ['2022-01-01', '2022-06-01'],\n",
+    "        'ends': ['2022-11-08', '2022-11-08']\n",
+    "    },\n",
+    "    'TX 2022 Abbott vs O’Rourke': {\n",
+    "        'search_terms': ['Texans for Greg Abbott', 'Beto for Texas'],\n",
+    "        'starts': ['2022-05-01', '2022-05-01'],\n",
+    "        'ends': ['2022-11-08', '2022-11-08']\n",
+    "    },\n",
+    "    'TX 2018 Abbott vs Valdez': {\n",
+    "        'search_terms': ['Texans for Greg Abbott', 'Lupe Valdez for Governor'],\n",
+    "        'starts': ['2018-05-01', '2018-05-01'],\n",
+    "        'ends': ['2018-11-06', '2018-11-06']\n",
+    "    },\n",
+    "    'FL 2022 DeSantis vs Crist': {\n",
+    "        'search_terms': ['Ron DeSantis For Governor', 'Charlie Crist, Democrat for Governor'],\n",
+    "        'starts': ['2022-05-01', '2022-05-01'],\n",
+    "        'ends': ['2022-11-08', '2022-11-08']\n",
+    "    },\n",
+    "}\n",
+    "\n",
     "\n",
     "LANGUAGES = [\n",
     "    \"en\",\n",
@@ -188,6 +227,85 @@
    ],
    "source": [
     "df['ad_creative_bodies'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# more data collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched 112 ads for Newsom for California Governor 2022 in en.\n",
+      "Fetched 0 ads for Brian Dahle for Governor 2022 in en.\n",
+      "Fetched 0 ads for Kevin Faulconer for Governor 2022 in en.\n",
+      "Fetched 14 ads for Newsom for California Governor 2018 in en.\n",
+      "Fetched 4 ads for John Cox for Governor 2018 in en.\n",
+      "Fetched 6 ads for Lombardo for Governor in en.\n",
+      "Fetched 423 ads for Committee to Elect Steve Sisolak in en.\n",
+      "Fetched 18 ads for Elect Katie Hobbs in en.\n",
+      "Fetched 48 ads for Lake For AZ in en.\n",
+      "Fetched 673 ads for Texans for Greg Abbott in en.\n",
+      "Fetched 800 ads for Beto for Texas in en.\n",
+      "Fetched 673 ads for Texans for Greg Abbott in en.\n",
+      "Fetched 0 ads for Lupe Valdez for Governor in en.\n",
+      "Fetched 478 ads for Ron DeSantis For Governor in en.\n",
+      "Fetched 6 ads for Charlie Crist, Democrat for Governor in en.\n",
+      "Fetched 6 ads for Charlie Crist, Democrat for Governor in en.\n",
+      "Fetched 0 ads for Newsom for California Governor 2022 in es.\n",
+      "Fetched 0 ads for Brian Dahle for Governor 2022 in es.\n",
+      "Fetched 0 ads for Kevin Faulconer for Governor 2022 in es.\n",
+      "Fetched 1 ads for Newsom for California Governor 2018 in es.\n",
+      "Fetched 0 ads for John Cox for Governor 2018 in es.\n",
+      "Fetched 0 ads for Lombardo for Governor in es.\n",
+      "Fetched 0 ads for Committee to Elect Steve Sisolak in es.\n",
+      "Fetched 0 ads for Elect Katie Hobbs in es.\n",
+      "Fetched 0 ads for Lake For AZ in es.\n",
+      "Fetched 0 ads for Texans for Greg Abbott in es.\n",
+      "Fetched 2 ads for Beto for Texas in es.\n",
+      "Fetched 0 ads for Texans for Greg Abbott in es.\n",
+      "Fetched 0 ads for Lupe Valdez for Governor in es.\n",
+      "Fetched 3 ads for Ron DeSantis For Governor in es.\n",
+      "Fetched 0 ads for Charlie Crist, Democrat for Governor in es.\n",
+      "Fetched 0 ads for Charlie Crist, Democrat for Governor in es.\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_ads = []\n",
+    "\n",
+    "search_type = 'KEYWORD_UNORDERED'\n",
+    "limit = 800\n",
+    "for language in LANGUAGES:\n",
+    "    for key, value in searches.items():\n",
+    "        for term, start, end in zip(value['search_terms'], value['starts'], value['ends']):\n",
+    "            # print(term, start, end)\n",
+    "            ads = fetch_ads(term, language, search_type=search_type, limit=limit)\n",
+    "            print(f\"Fetched {len(ads)} ads for {term} in {language}.\")\n",
+    "            ads_df = pd.DataFrame(ads)\n",
+    "            ads_df.to_csv(f'../data/ads_{language}_{term}_{key}.csv', index=False)\n",
+    "            all_ads.extend(ads)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "    ads = fetch_ads(term, language, search_type=search_type, limit=limit)\n",
+    "    print(f\"Fetched {len(ads)} ads for {term} in {language}.\")\n",
+    "    ads_df = pd.DataFrame(ads)\n",
+    "    ads_df.to_csv(f'../data/ads_{language}_{term}.csv', index=False)\n",
+    "    all_ads.extend(ads)\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(all_ads)\n",
+    "df.to_csv('../data/new_ads_all.csv', index=False)"
    ]
   }
  ],
