--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/torch_base/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thouroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import T5ForConditionalGeneration, T5Tokenizer\n",
@@ -303,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +365,7 @@
        "Name: Spanish, Length: 1093, dtype: object"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,6 +385,15 @@
     "df_analysis['ES_sentiment'] = df_analysis.apply(lambda row: classifier.classify(row['Spanish']), axis=1)\n",
     "df_analysis['sentimentDiff_EN-ES'] = df_analysis['EN_sentiment'] - df_analysis['ES_sentiment']\n",
     "df_analysis['sentimentDiff_ES-EN'] = df_analysis['ES_sentiment'] - df_analysis['EN_sentiment']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_analysis.to_csv('analysis.csv', index=False)"
    ]
   },
   {
@@ -379,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +439,7 @@
        "TtestResult(statistic=0.8315368034778755, pvalue=0.40933246313341876, df=54.0)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +468,7 @@
        "TtestResult(statistic=-2.4012451426854597, pvalue=0.016514952347529612, df=1035.0)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
